--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -1,3 +1,66 @@
 /* This is a multi-line
 comment. Add your CSS code
 from Unit 1 - 5 below  */
+
+h1 {
+	color: rgb(2, 132, 130);
+}
+
+h2 {
+	color: #ffd700;
+}
+
+.board {
+	height: 50%;
+	width: 50%;
+	display: inline-block;
+	float: left;
+	margin: 8%; 
+}
+
+.card {
+	height: 200px;
+	width: 150px;
+	border: 1px black solid; 
+	background: #ffff00;
+	float: left;
+	margin: 20px;
+}
+
+.name {
+	color: #ff0000;
+}
+
+nav {
+	background: #808080
+}
+
+nav a {
+	background: #ffbf00; 
+	color: white;
+	padding: 35px; 
+	display: block;
+	float: left;
+}
+
+a:hover {
+	background: #ee5f3c;
+}
+
+.clearfix:after {
+        visibility: hidden;
+        display: block;
+        content: " ";
+        clear: both;
+        height: 0;
+        font-size: 0;
+}
+
+footer {
+	background: #808080;
+	clear: both;
+}
+
+h1, h2, p, footer {
+	text-align: center; 
+}
